Phase 4: Security Hardening. Enabled CORS for frontend, allowed Keycloak iframes, and secured Cloudflare Tunnel config.